--- a/app/src/main/res/layout/video_list_item.xml
+++ b/app/src/main/res/layout/video_list_item.xml
@@ -32,7 +32,7 @@
             app:layout_constraintEnd_toEndOf="@+id/cvVideo"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            app:srcCompat="@drawable/ic_play" />
+            app:srcCompat="@drawable/ic_play_circle_filled_white" />
 
         <android.support.constraint.ConstraintLayout
             android:layout_width="match_parent"
